offers wysiwyg overflow fix

--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -29,8 +29,9 @@
   font-weight: 600;
   line-height: 32px;
   color: $dark-cerulean-blue;
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
+  max-width: 250px;
 
   @media (min-width: $tablet-width) {
     font-size: 42px;
