--- a/source/sass/blocks/wysiwyg-wrapper.scss
+++ b/source/sass/blocks/wysiwyg-wrapper.scss
@@ -337,6 +337,8 @@
   font-size: 22px;
   font-weight: 700;
   line-height: 22px;
+  max-width: 250px;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
     font-size: 24px;
@@ -353,7 +355,8 @@
   font-size: 64px;
   font-weight: 700;
   line-height: 64px;
-  margin-top: 8px;
+  max-width: 250px;
+  margin: 8px auto 0;
 
   @media (min-width: $tablet-width) {
     font-size: 70px;
